--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GremlinJS-Website",
-  "version": "0.4.0",
+  "version": "0.1.0",
   "main": "./index.html",
   "license": "MIT",
   "repository": {
@@ -9,15 +9,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt-contrib-watch": "~0.5.1",
     "grunt": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.1",
     "grunt-contrib-connect": "~0.1.2",
-    "mantri": "~0.1.0",
-    "grunt-contrib-coffee": "~0.6.4",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-mocha": "~0.3.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "mdoc": "~0.3.4"
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
