--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "type": "git",
     "url": "https://github.com/grmlin/gremlinjs-website.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "grunt": "~0.4.1",
+    "grunt-php": "~0.1.1",
+    "grunt-contrib-less": "~0.5.2"
+  },
   "devDependencies": {
-    "grunt": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-connect": "~0.1.2",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-watch": "~0.4.4"
   }
 }
