--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-watch": "~0.5.1",
     "grunt-contrib-connect": "~0.1.2",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
