--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,9 +3,11 @@ theme: 'bootstrap'
 theme_dir: 'custom_theme'
 repo_url: 'https://github.com/grmlin/gremlins'
 site_author: 'Andreas Wehr'
-markdown_extensions: [fenced_code]
+markdown_extensions: [fenced_code, meta]
 
 
 pages:
 - ['index.md', 'GREMLIN.JS']
-- ['modules.md', 'Modules']
+- ['learn.md', 'Learn']
+- ['api.md', 'Documentation']
+- ['modules.html', 'Modules']
