--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
   "devDependencies": {
     "babelify": "^5.0.4",
     "browserify": "^9.0.3",
+    "exorcist": "^0.1.6",
+    "github-api": "^0.10.4",
     "gremlins": "^0.8.1",
     "gulp": "^3.8.11",
     "gulp-sourcemaps": "^1.5.1",
-    "through2": "^0.6.3"
+    "gulp-uglify": "^1.1.0",
+    "gulp-uglifyjs": "^0.6.1",
+    "mold-source-map": "^0.3.0",
+    "react": "^0.13.1",
+    "react-masonry-mixin": "^0.5.5",
+    "uglifyify": "^3.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
