--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gremlins-website",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "gremlinjs website and documentation",
   "repository": {
     "type": "git",
@@ -12,20 +12,22 @@
     "url": "https://github.com/grmlin/gremlins-website/issues"
   },
   "homepage": "http://grml.in",
-  "dependencies": {},
+  "dependencies": {
+    "babel": "^5.5.8"
+  },
   "devDependencies": {
-    "babelify": "^5.0.4",
-    "browserify": "^9.0.3",
-    "exorcist": "^0.1.6",
-    "github-api": "^0.10.4",
-    "gremlins": "^0.8.1",
-    "gulp": "^3.8.11",
-    "gulp-sourcemaps": "^1.5.1",
-    "gulp-uglify": "^1.1.0",
-    "gulp-uglifyjs": "^0.6.1",
-    "mold-source-map": "^0.3.0",
-    "react": "^0.13.1",
-    "react-masonry-mixin": "^0.5.5",
+    "babelify": "^6.1.2",
+    "browserify": "^10.2.4",
+    "exorcist": "^0.4.0",
+    "github-api": "^0.10.6",
+    "gremlins": "^0.9.0",
+    "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "mold-source-map": "^0.4.0",
+    "react": "^0.13.3",
+    "react-masonry-mixin": "^0.5.7",
     "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
