--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "babel": "^5.5.8"
   },
   "devDependencies": {
+    "babel-runtime": "^5.8.25",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "exorcist": "^0.4.0",
     "github-api": "^0.10.6",
-    "gremlins": "^0.9.0",
+    "gremlins": "^0.11.1",
     "gulp": "^3.9.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
